[project]
name = "bluprint-conf"
version = "0.1.0"
description = "YAML configuration module for Bluprint"
authors = [
    {name = "igor-sb", email = "84479009+igor-sb@users.noreply.github.com"},
]
dependencies = [
    "omegaconf>=2.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "unify>=0.5",
    "isort>=5.13.2",
    "pre-commit>=3.6.0",
    "coverage>=7.3.3",
    "mypy>=1.7.1",
    "sphinx>=7.2.6",
    "pytest>=7.4.3",
    "flake8-pyproject>=1.2.3",
    "wemake-python-styleguide>=0.18.0",
    "autopep8>=2.0.4",
]

[tool.isort]
profile = "wemake"
line_length = 79

[tool.flake8]
ignore = [
	'D101',  # D101 Missing docstring in public class
	'D102',  # D102 Missing docstring in public method
	'D103',  # D103 Missing docstring in public function
	'D104',  # Missing docstring in public package
	'D107',  # D107 Missing docstring in __init__
	'D412',  # No blank lines allowed between a section header and its content
	'I003',  # I003 isort expected 1 blank line in imports, found 0
	'DAR101',  # DAR101 Missing parameter(s) in Docstring: - repeated_bases_regex
	'DAR201',  # DAR201 Missing "Returns" in Docstring: - return
	'S311',  # S311 Standard pseudo-random generators are not suitable for security/cryptographic purposes.
	'S404',  # Consider possible security implications associated with the subprocess module.
	'S603',  # subprocess call - check for execution of untrusted input.
	'S607',  # Starting a process with a partial executable path
	'WPS348',  # WPS348 Found a line that starts with a dot
	'WPS226',  # WPS226 Found string literal over-use: count > 3
	'WPS305',  # WPS305 Found `f` string
	'W503',  # line break before binary operator
]
per-file-ignores = [
	# S101 Use of assert detected.
	# S403 Consider possible security implications associated with pickle module.
	'tests/*: S101, S403',
	# WPS202 Found too many module members
    'tests/**/conftest.py: WPS202',
	# WPS412 Found `__init__.py` module with logic
	# F401 imported but unused
	'**/__init__.py: WPS412, F401',
]
exclude = [
	'docs',
	'.venv',
	'.git'
]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
	"pandas.*",
	"fire.*",
	"notebook.*",
]
ignore_missing_imports = true
