[project]
name = "bluprint-conf"
version = "0.1.0"
description = "YAML configuration module for Bluprint"
authors = [
    {name = "igor-sb", email = "84479009+igor-sb@users.noreply.github.com"},
]
dependencies = [
    "omegaconf>=2.3.0",
    "importlib-resources>=6.1.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
prototyping = [
    "ipykernel>=6.27.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "unify>=0.5",
    "isort>=5.13.2",
    "pre-commit>=3.6.0",
    "coverage>=7.3.3",
    "mypy>=1.7.1",
    "pytest>=7.4.3",
    "flake8-pyproject>=1.2.3",
    "wemake-python-styleguide>=0.18.0",
    "autopep8>=2.0.4",
    "sphinx>=7.2.6",
    "sphinx-copybutton>=0.5.2",
    "sphinx-immaterial>=0.11.10",
	"sphinxcontrib-napoleon>=0.7",
]

[tool.isort]
profile = "wemake"
line_length = 79

[tool.flake8]
ignore = [
	'D',  # Docstring linting
	'RST',  # Ignore ugly Restructured Text formatting from WPS
	'I003',  # I003 isort expected 1 blank line in imports, found 0
	'S311',  # S311 Standard pseudo-random generators are not suitable for security/cryptographic purposes.
	'S404',  # Consider possible security implications associated with the subprocess module.
	'S603',  # subprocess call - check for execution of untrusted input.
	'S607',  # Starting a process with a partial executable path
	'WPS348',  # WPS348 Found a line that starts with a dot
	'WPS226',  # WPS226 Found string literal over-use: count > 3
	'WPS305',  # WPS305 Found `f` string
	'W503',  # line break before binary operator
]
per-file-ignores = [
	# S101 Use of assert detected.
	# S403 Consider possible security implications associated with pickle module.
	'tests/*: S101, S403',
	# WPS202 Found too many module members
    'tests/**/conftest.py: WPS202',
	# WPS412 Found `__init__.py` module with logic
	# WPS347 Found vague import that may cause confusion: *
	# F401 imported but unused
	# F403 used; unable to detect undefined names
	'**/__init__.py: WPS412, WPS347, F401, F403',
]
exclude = [
	'docs',
	'.venv',
	'.git',
]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
	"pandas.*",
	"notebook.*",
]
ignore_missing_imports = true
